--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,3 +1,9 @@
+<!--Seite bekommt Model übergeben-->
+<!--th=thymeleaf, damit wird die Variable today aus dem Model in die Seite eingebunden-->
+<!-- today war im Model-->
+<!-- Kann Sachen ersetzen-->
+<!-- schickt fertig geänderte Seite zurück an Browser-->
+<!-- MVC -Model View Controller (Konzept was dahinter ist) -->
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/html">
 <head>
